<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_control"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ControlActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorAccent"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/appbar" />

    <TextView
        android:id="@+id/tv_status_connect"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_below="@+id/appbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center" />

    <LinearLayout
        android:id="@+id/view_temp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="40dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:layout_below="@id/tv_status_connect">

        <TextView
            android:id="@+id/tv_temp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="@string/c"
            android:textSize="24sp"
            android:gravity="center"/>

    </LinearLayout>


    <LinearLayout
        android:layout_below="@+id/view_temp"
        android:id="@+id/layout_input"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/edt_input"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/input"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:completionThreshold="1"
            android:inputType="textCapCharacters"/>

        <Button
            style="@style/Widget.AppCompat.Button.Small"
            android:text="@string/send"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:typeface="monospace"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#607C4DFF"/>

    </LinearLayout>

    <TextView
        android:layout_margin="16dp"
        android:id="@+id/tv_output"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:textColor="#795548"
        android:textSize="18sp"
        android:background="#F5F5F5"
        android:text="@string/output"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/layout_input"/>

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/tv_brightness"
        android:layout_below="@+id/tv_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/brightness_default"
        android:gravity="center"/>


    <SeekBar
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tv_brightness"
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="0"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:max="100"/>

    <LinearLayout
        android:layout_below="@+id/seek_bar"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_height="80dp"
        tools:ignore="ButtonStyle"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/btn_led1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/led1"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:background="@color/led1Off"/>

        <Button
            android:id="@+id/btn_led2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/led2"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:background="@color/led2Off">

        </Button>

        <Button
            android:id="@+id/btn_led3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/led3"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:background="@color/led3Off"/>

        <Button
            android:id="@+id/btn_led4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/led4"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:background="@color/led4Off"/>


    </LinearLayout>


    <Button
        android:id="@+id/btn_disconnect"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:text="@string/disconnect"
        android:textColor="@android:color/white"
        android:background="#A1887F"
        android:textStyle="bold"
        android:typeface="monospace"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"/>






</RelativeLayout>
